# intranet

./: .gitignore  LICENSE.txt
backend/: pyproject.toml
backend/server/: db.sqlite3
backend/server/core/: admin.py  models.py  urls.py  views.py
backend/server/core/lib/: class_assign.py  error.py  event.py  fs.py  user.py
backend/server/core/migrations/: 0001_initial.py  0002_alter_parent_options_alter_student_options_and_more.py  0003_event_alter_course_color_submission_lesson.py  0004_alter_course_color_alter_event_color.py
backend/server/core/tests/: test_auth_api.py
backend/server/server/: settings.py  urls.py
ui/: package-lock.json
